--- a/creations/limit_frame.html
+++ b/creations/limit_frame.html
@@ -88,5 +88,6 @@ setInterval(swapImage, 200);
 </script>
 
 <div class="page-counter">7/7</div>
+<div class="page-counter">3/6</div>
 </body>
 </html>
