--- a/creations/Doom Lifting.html
+++ b/creations/Doom Lifting.html
@@ -115,5 +115,6 @@ function animate(){
 animate();
 </script>
 <div class="page-counter">6/7</div>
+<div class="page-counter">1/6</div>
 </body>
 </html>
