--- a/creations/Lava Lamp_fail.html
+++ b/creations/Lava Lamp_fail.html
@@ -94,5 +94,6 @@ function drawLamp(){
 drawLamp();
 </script>
 <div class="page-counter">5/7</div>
+<div class="page-counter">2/6</div>
 </body>
 </html>
