--- a/creations/eyes.html
+++ b/creations/eyes.html
@@ -36,6 +36,7 @@ html, body {
   transition: top 0.05s, left 0.05s;
 }
 </style>
+    <link rel="stylesheet" href="../styles/counter.css">
 </head>
 <body>
 <div class="eye" style="left:calc(50% - 150px); top:50%;"><div class="pupil"></div></div>
@@ -74,5 +75,6 @@ document.addEventListener('mousemove', e => {
   });
 });
 </script>
+<div class="page-counter">2/7</div>
 </body>
 </html>
