--- a/creations/eyes.html
+++ b/creations/eyes.html
@@ -89,13 +89,12 @@ setTimeout(() => {
 }, 20000);
 </script>
 
+<div class="page-counter">3/10</div>
+<div class="page-buttons">
+    <button onclick="location.href='/'">Home</button>
+    <button onclick="location.href='/inventory.html'">Inventory</button>
+</div>
 
-
-
-
-
-
-<div class="page-counter">2/9</div>
 </body>
 </html>
 
