--- a/creations/read_a_book.html
+++ b/creations/read_a_book.html
@@ -15904,7 +15904,11 @@ function typeText(text) {
 typeText(text);
 </script>
 
+<div class="page-counter">9/10</div>
+<div class="page-buttons">
+    <button onclick="location.href='/'">Home</button>
+    <button onclick="location.href='/inventory.html'">Inventory</button>
+</div>
 
-<div class="page-counter">8/9</div>
 </body>
 </html>
