--- a/creations/Doom Lifting.html
+++ b/creations/Doom Lifting.html
@@ -115,13 +115,11 @@ function animate(){
 animate();
 </script>
 
+<div class="page-counter">1/10</div>
+<div class="page-buttons">
+    <button onclick="location.href='/'">Home</button>
+    <button onclick="location.href='/inventory.html'">Inventory</button>
+</div>
 
-
-
-
-
-
-
-<div class="page-counter">1/9</div>
 </body>
 </html>
