--- a/creations/Lava Lamp_fail.html
+++ b/creations/Lava Lamp_fail.html
@@ -94,13 +94,11 @@ function drawLamp(){
 drawLamp();
 </script>
 
+<div class="page-counter">4/10</div>
+<div class="page-buttons">
+    <button onclick="location.href='/'">Home</button>
+    <button onclick="location.href='/inventory.html'">Inventory</button>
+</div>
 
-
-
-
-
-
-
-<div class="page-counter">3/9</div>
 </body>
 </html>
