--- a/creations/Lunar Clock.html
+++ b/creations/Lunar Clock.html
@@ -159,13 +159,11 @@ function draw(){
 draw();
 </script>
 
+<div class="page-counter">6/10</div>
+<div class="page-buttons">
+    <button onclick="location.href='/'">Home</button>
+    <button onclick="location.href='/inventory.html'">Inventory</button>
+</div>
 
-
-
-
-
-
-
-<div class="page-counter">5/9</div>
 </body>
 </html>
