--- a/creations/THE INFUSION.html
+++ b/creations/THE INFUSION.html
@@ -112,6 +112,11 @@ setInterval(()=>{
 
 </script>
 
-<div class="page-counter">9/9</div>
+<div class="page-counter">10/10</div>
+<div class="page-buttons">
+    <button onclick="location.href='/'">Home</button>
+    <button onclick="location.href='/inventory.html'">Inventory</button>
+</div>
+
 </body>
 </html>
