--- a/creations/emojis.html
+++ b/creations/emojis.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Emoji Rain</title>
+<title>Emojis</title>
 <style>
   html, body {
     margin: 0;
@@ -19,6 +19,7 @@
     pointer-events: none;
   }
 </style>
+    <link rel="stylesheet" href="../styles/counter.css">
 </head>
 <body>
 
@@ -97,6 +98,12 @@ window.addEventListener('resize', () => {
   }
 });
 </script>
+
+<div class="page-counter">2/10</div>
+<div class="page-buttons">
+    <button onclick="location.href='/'">Home</button>
+    <button onclick="location.href='/inventory.html'">Inventory</button>
+</div>
 
 </body>
 </html>
