--- a/creations/limit_frame.html
+++ b/creations/limit_frame.html
@@ -87,14 +87,11 @@ function swapImage() {
 setInterval(swapImage, 200);
 </script>
 
+<div class="page-counter">5/10</div>
+<div class="page-buttons">
+    <button onclick="location.href='/'">Home</button>
+    <button onclick="location.href='/inventory.html'">Inventory</button>
+</div>
 
-
-
-
-
-
-
-
-<div class="page-counter">4/9</div>
 </body>
 </html>
