--- a/creations/neutron.html
+++ b/creations/neutron.html
@@ -82,11 +82,11 @@ function draw() {
 draw();
 </script>
 
+<div class="page-counter">7/10</div>
+<div class="page-buttons">
+    <button onclick="location.href='/'">Home</button>
+    <button onclick="location.href='/inventory.html'">Inventory</button>
+</div>
 
-
-
-
-
-<div class="page-counter">6/9</div>
 </body>
 </html>
