--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ button:hover {
     }
 }
 </style>
+<link rel="stylesheet" href="../styles/counter.css">
 </head>
 
 <body>
@@ -120,10 +121,10 @@ button:hover {
 
 <div id="ui" class="hidden">
     <h1>
-        HELLO
-        <span>HEllO</span>
+        MY FAILED LIFE
+        <span>my_failed_life     :-( </span>
     </h1>
-    <button id="btn">cliCk</button>
+    <button id="btn">Random Page</button>
 </div>
 
 <script>
@@ -224,6 +225,8 @@ btn.addEventListener("click", () => {
     }, 1600);
 });
 </script>
-
+<div class="page-buttons">
+    <button onclick="location.href='/inventory.html'">Inventory</button>
+</div>
 </body>
 </html>
