--- a/inventory.html
+++ b/inventory.html
@@ -3,41 +3,168 @@
 <head>
 <meta charset="UTF-8">
 <title>Inventory</title>
-<link rel="stylesheet" href="styles/counter.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
-.inventory-buttons {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 6px;
-  margin: 20px;
+html, body {
+    margin: 0;
+    padding: 0;
+    background: #050505;
+    color: #dcdcdc;
+    font-family: monospace;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
+
+h1 {
+    font-size: clamp(2rem, 6vw, 4rem);
+    letter-spacing: 0.2em;
+    margin-top: 2rem;
+    position: relative;
+    text-align: center;
+}
+h1 span {
+    position: absolute;
+    inset: 0;
+    color: red;
+    opacity: 0.4;
+    transform: translate(3px, 0);
+}
+
+.inventory-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12px;
+    margin: 2rem;
+    justify-content: center;
+}
+
 .inventory-buttons button {
-  font-size: 14px;
-  padding: 6px 12px;
-  border-radius: 4px;
-  border: none;
-  background-color: rgba(0,0,0,0.05);
-  cursor: pointer;
+    background: none;
+    color: #dcdcdc;
+    border: 2px solid #dcdcdc;
+    padding: 1rem 2rem;
+    font-size: 1rem;
+    letter-spacing: 0.2em;
+    border-radius: 4px;
+    cursor: pointer;
+    position: relative;
+    transition: all 0.2s ease;
 }
 .inventory-buttons button:hover {
-  background-color: rgba(0,0,0,0.1);
+    color: #ff004c;
+    border-color: #ff004c;
+}
+
+.glitch {
+    animation: glitch 0.1s infinite;
+}
+
+@keyframes glitch {
+    from { transform: translate(0,0); }
+    to { transform: translate(2px,-2px); }
+}
+
+.slice {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    background: inherit;
+    pointer-events: none;
+    animation: tear 0.15s infinite;
+}
+
+@keyframes tear {
+    0% { clip-path: inset(0 0 90% 0); }
+    50% { clip-path: inset(10% 0 50% 0); }
+    100% { clip-path: inset(70% 0 10% 0); }
+}
+
+.fragment {
+    position: absolute;
+    font-size: 0.9rem;
+    opacity: 0.8;
+    animation: fall 2s linear forwards;
+}
+
+@keyframes fall {
+    to {
+        transform: translateY(120vh) rotate(30deg);
+        opacity: 0;
+    }
 }
 </style>
+<link rel="stylesheet" href="../styles/counter.css">
 </head>
 <body>
-<h1>Inventory</h1>
+
+<h1>
+    INVENTORY
+    <span>INVENTORY</span>
+</h1>
+
 <div class="inventory-buttons">
-  <button onclick="location.href='creations/Doom Lifting.html'">01</button>
-  <button onclick="location.href='creations/emojis.html'">02</button>
-  <button onclick="location.href='creations/eyes.html'">03</button>
-  <button onclick="location.href='creations/Lava Lamp_fail.html'">04</button>
-  <button onclick="location.href='creations/limit_frame.html'">05</button>
-  <button onclick="location.href='creations/Lunar Clock.html'">06</button>
-  <button onclick="location.href='creations/neutron.html'">07</button>
-  <button onclick="location.href='creations/page_02.html'">08</button>
-  <button onclick="location.href='creations/read_a_book.html'">09</button>
-  <button onclick="location.href='creations/THE INFUSION.html'">10</button>
+  <button onclick="goTo('creations/Doom Lifting.html')">01</button>
+  <button onclick="goTo('creations/emojis.html')">02</button>
+  <button onclick="goTo('creations/eyes.html')">03</button>
+  <button onclick="goTo('creations/Lava Lamp_fail.html')">04</button>
+  <button onclick="goTo('creations/limit_frame.html')">05</button>
+  <button onclick="goTo('creations/Lunar Clock.html')">06</button>
+  <button onclick="goTo('creations/maze.html')">07</button>
+  <button onclick="goTo('creations/neutron.html')">08</button>
+  <button onclick="goTo('creations/page_02.html')">09</button>
+  <button onclick="goTo('creations/read_a_book.html')">10</button>
+  <button onclick="goTo('creations/THE INFUSION.html')">11</button>
+  <button onclick="goTo('creations/woman.html')">12</button>
 </div>
 
+<script>
+function goTo(url) {
+    document.body.classList.add("glitch");
+
+    for (let i = 0; i < 3; i++) {
+        const s = document.createElement("div");
+        s.className = "slice";
+        s.style.top = Math.random() * 100 + "%";
+        document.body.appendChild(s);
+    }
+
+    document.querySelectorAll("*").forEach(el => {
+        if (el.innerText && el.innerText.length < 40) {
+            const frag = document.createElement("div");
+            frag.className = "fragment";
+            frag.textContent = el.innerText;
+            frag.style.left = Math.random() * 100 + "vw";
+            frag.style.top = Math.random() * 50 + "vh";
+            document.body.appendChild(frag);
+        }
+    });
+
+    const ctx = new AudioContext();
+    const o = ctx.createOscillator();
+    const g = ctx.createGain();
+    o.type = "square";
+    o.frequency.value = 90;
+    o.connect(g);
+    g.connect(ctx.destination);
+    g.gain.value = 0.2;
+    o.start();
+    setTimeout(() => o.stop(), 300);
+
+    setTimeout(() => {
+        document.body.style.transform = "scale(0.3) rotate(-10deg)";
+        document.body.style.opacity = 0;
+    }, 900);
+
+    setTimeout(() => location.href = url, 1600);
+}
+</script>
+<div class="page-buttons">
+<button onclick="location.href='/'">Home</button>
+</div>
 </body>
 </html>
