--- a/inventory.html
+++ b/inventory.html
@@ -119,7 +119,8 @@ h1 span {
   <button onclick="goTo('creations/page_02.html')">09</button>
   <button onclick="goTo('creations/read_a_book.html')">10</button>
   <button onclick="goTo('creations/THE INFUSION.html')">11</button>
-  <button onclick="goTo('creations/woman.html')">12</button>
+  <button onclick="goTo('creations/WIPE ME.html')">12</button>
+  <button onclick="goTo('creations/woman.html')">13</button>
 </div>
 
 <script>
