--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <title>SYSTEM READY</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../styles/counter.css">
+<link rel="stylesheet" href="styles/counter.css">
 <style>
 html, body {
     margin: 0;
