--- a/inventory.html
+++ b/inventory.html
@@ -98,7 +98,7 @@ h1 span {
     }
 }
 </style>
-<link rel="stylesheet" href="../styles/counter.css">
+<link rel="stylesheet" href="styles/counter.css">
 </head>
 <body>
 
@@ -165,7 +165,7 @@ function goTo(url) {
 }
 </script>
 <div class="page-buttons">
-<button onclick="location.href='/'">Home</button>
+<button onclick="location.href='./'">Home</button>
 </div>
 </body>
 </html>
