--- a/creations/THE INFUSION.html
+++ b/creations/THE INFUSION.html
@@ -114,8 +114,12 @@ setInterval(()=>{
 
 <div class="page-counter">11/13</div>
 <div class="page-buttons">
-    <button onclick="location.href='./'">Home</button>
-    <button onclick="location.href='inventory.html'">Inventory</button>
+    <button onclick="location.href='https://chris-sta.github.io/my_failed_life/index.html'">
+        Home
+    </button>
+    <button onclick="location.href='https://chris-sta.github.io/my_failed_life/inventory.html'">
+        Inventory
+    </button>
 </div>
 
 </body>
