--- a/creations/Doom Lifting.html
+++ b/creations/Doom Lifting.html
@@ -117,8 +117,12 @@ animate();
 
 <div class="page-counter">1/13</div>
 <div class="page-buttons">
-    <button onclick="location.href='./'">Home</button>
-    <button onclick="location.href='inventory.html'">Inventory</button>
+    <button onclick="location.href='https://chris-sta.github.io/my_failed_life/index.html'">
+        Home
+    </button>
+    <button onclick="location.href='https://chris-sta.github.io/my_failed_life/inventory.html'">
+        Inventory
+    </button>
 </div>
 
 </body>
