--- a/creations/Lava Lamp_fail.html
+++ b/creations/Lava Lamp_fail.html
@@ -96,8 +96,12 @@ drawLamp();
 
 <div class="page-counter">4/13</div>
 <div class="page-buttons">
-    <button onclick="location.href='./'">Home</button>
-    <button onclick="location.href='inventory.html'">Inventory</button>
+    <button onclick="location.href='https://chris-sta.github.io/my_failed_life/index.html'">
+        Home
+    </button>
+    <button onclick="location.href='https://chris-sta.github.io/my_failed_life/inventory.html'">
+        Inventory
+    </button>
 </div>
 
 </body>
