--- a/creations/emojis.html
+++ b/creations/emojis.html
@@ -101,8 +101,12 @@ window.addEventListener('resize', () => {
 
 <div class="page-counter">2/13</div>
 <div class="page-buttons">
-    <button onclick="location.href='./'">Home</button>
-    <button onclick="location.href='inventory.html'">Inventory</button>
+    <button onclick="location.href='https://chris-sta.github.io/my_failed_life/index.html'">
+        Home
+    </button>
+    <button onclick="location.href='https://chris-sta.github.io/my_failed_life/inventory.html'">
+        Inventory
+    </button>
 </div>
 
 </body>
