--- a/creations/limit_frame.html
+++ b/creations/limit_frame.html
@@ -89,8 +89,12 @@ setInterval(swapImage, 200);
 
 <div class="page-counter">5/13</div>
 <div class="page-buttons">
-    <button onclick="location.href='./'">Home</button>
-    <button onclick="location.href='inventory.html'">Inventory</button>
+    <button onclick="location.href='https://chris-sta.github.io/my_failed_life/index.html'">
+        Home
+    </button>
+    <button onclick="location.href='https://chris-sta.github.io/my_failed_life/inventory.html'">
+        Inventory
+    </button>
 </div>
 
 </body>
