--- a/index.html
+++ b/index.html
@@ -135,14 +135,19 @@ window.addEventListener('pageshow', (event) => {
 });
 
 const bootText = [
+    "INITIALIZING HTML...",
+    "INITIALIZING CSS...",
     "INITIALIZING JAVASCRIPT...",
-    "CHECKING CONSISTENCY",
     "APPLYING FIX",
+    "FIX FAILED",
     "APPLYING TEMPORARY FIX",
     "FIX FAILED",
+    "...",
+    "...",
+    "...",
+    "...",
     "EVERYTHING IS FINE",
     "",
-    "READY."
 ];
 
 const boot = document.getElementById("boot");
