--- a/creations/i_really_should_be_sleeping_right_now.html
+++ b/creations/i_really_should_be_sleeping_right_now.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
-    <div id="speedometer">Speed: <span id="speed">0</span> km/h</div>
+    // <div id="speedometer">Speed: <span id="speed">0</span> km/h</div>
     
     <script>
         const canvas = document.getElementById('gameCanvas');
@@ -1120,7 +1120,7 @@
         animate();
     </script>
 
-<div class="page-counter">7/20</div>
+<div class="page-counter">8/23</div>
 <div class="page-buttons">
     <button onclick="location.href='https://chris-sta.github.io/my_failed_life/index.html'">
         Home
