--- a/creations/rats.html
+++ b/creations/rats.html
@@ -48,18 +48,9 @@
 <body>
     <script>
         const ratImages = [
-            'https://cdn.pixabay.com/photo/2017/02/10/12/03/rat-2055641_1280.png',
-            'https://cdn.pixabay.com/photo/2013/07/12/14/15/mouse-148107_1280.png',
-            'https://cdn.pixabay.com/photo/2020/04/12/18/32/rat-5035181_1280.png',
-            'https://cdn.pixabay.com/photo/2012/04/13/00/22/rat-31333_1280.png',
-            'https://cdn.pixabay.com/photo/2013/07/12/14/33/mouse-148377_1280.png',
-            'https://cdn.pixabay.com/photo/2020/06/15/01/06/rat-5299814_1280.png',
-            'https://cdn.pixabay.com/photo/2016/12/15/00/17/mouse-1908138_1280.png',
-            'https://cdn.pixabay.com/photo/2013/07/13/13/41/rat-161280_1280.png',
-            'https://cdn.pixabay.com/photo/2017/09/25/13/12/dog-2785074_1280.jpg',
-            'https://images.unsplash.com/photo-1425082661705-1834bfd09dca?w=400',
-            'https://images.unsplash.com/photo-1584573123173-b0d6a21bfa5c?w=400',
-            'https://images.unsplash.com/photo-1548681528-6a5c45b66b42?w=400'
+            '../resources/rat1.png',
+            '../resources/rat2.png',
+            '../resources/rat3.png'
         ];
         
         class Rat {
@@ -160,7 +151,7 @@
         });
     </script>
 
-<div class="page-counter">14/20</div>
+<div class="page-counter">16/23</div>
 <div class="page-buttons">
     <button onclick="location.href='https://chris-sta.github.io/my_failed_life/index.html'">
         Home
