--- a/inventory.html
+++ b/inventory.html
@@ -111,23 +111,26 @@ h1 span {
   <button onclick="goTo('creations/clock_v1_0.html')">01</button>
   <button onclick="goTo('creations/clock_v2_0.html')">02</button>
   <button onclick="goTo('creations/clock_v3_0.html')">03</button>
-  <button onclick="goTo('creations/Doom Lifting.html')">04</button>
-  <button onclick="goTo('creations/emojis.html')">05</button>
-  <button onclick="goTo('creations/eyes.html')">06</button>
-  <button onclick="goTo('creations/i_really_should_be_sleeping_right_now.html')">07</button>
-  <button onclick="goTo('creations/Lava Lamp_fail.html')">08</button>
-  <button onclick="goTo('creations/limit_frame.html')">09</button>
-  <button onclick="goTo('creations/Lunar Clock.html')">10</button>
-  <button onclick="goTo('creations/maze.html')">11</button>
-  <button onclick="goTo('creations/neutron.html')">12</button>
-  <button onclick="goTo('creations/page_02.html')">13</button>
-  <button onclick="goTo('creations/rats.html')">14</button>
-  <button onclick="goTo('creations/rats_also.html')">15</button>
-  <button onclick="goTo('creations/read_a_book.html')">16</button>
-  <button onclick="goTo('creations/THE INFUSION.html')">17</button>
-  <button onclick="goTo('creations/toenails.html')">18</button>
-  <button onclick="goTo('creations/WIPE ME.html')">19</button>
-  <button onclick="goTo('creations/woman.html')">20</button>
+  <button onclick="goTo('creations/cmd.html')">04</button>
+  <button onclick="goTo('creations/Doom Lifting.html')">05</button>
+  <button onclick="goTo('creations/emojis.html')">06</button>
+  <button onclick="goTo('creations/eyes.html')">07</button>
+  <button onclick="goTo('creations/i_really_should_be_sleeping_right_now.html')">08</button>
+  <button onclick="goTo('creations/Lava Lamp_fail.html')">09</button>
+  <button onclick="goTo('creations/limit_frame.html')">10</button>
+  <button onclick="goTo('creations/Lunar Clock.html')">11</button>
+  <button onclick="goTo('creations/maze.html')">12</button>
+  <button onclick="goTo('creations/neutron.html')">13</button>
+  <button onclick="goTo('creations/Norbletex.html')">14</button>
+  <button onclick="goTo('creations/page_02.html')">15</button>
+  <button onclick="goTo('creations/rats.html')">16</button>
+  <button onclick="goTo('creations/rats_also.html')">17</button>
+  <button onclick="goTo('creations/read_a_book.html')">18</button>
+  <button onclick="goTo('creations/THE INFUSION.html')">19</button>
+  <button onclick="goTo('creations/toenails.html')">20</button>
+  <button onclick="goTo('creations/weather.html')">21</button>
+  <button onclick="goTo('creations/WIPE ME.html')">22</button>
+  <button onclick="goTo('creations/woman.html')">23</button>
 </div>
 
 <script>
