--- a/inventory.html
+++ b/inventory.html
@@ -128,10 +128,12 @@ h1 span {
   <button onclick="goTo('creations/read_a_book.html')">18</button>
   <button onclick="goTo('creations/THE INFUSION.html')">19</button>
   <button onclick="goTo('creations/toenails.html')">20</button>
-  <button onclick="goTo('creations/weather.html')">21</button>
-  <button onclick="goTo('creations/WIPE ME.html')">22</button>
-  <button onclick="goTo('creations/woman.html')">23</button>
-  <button onclick="goTo('creations/Xjljqfejb.html')">24</button>
+  <button onclick="goTo('creations/tunnel.html')">21</button>
+  <button onclick="goTo('creations/tunnel_v2_0.html')">22</button>
+  <button onclick="goTo('creations/weather.html')">23</button>
+  <button onclick="goTo('creations/WIPE ME.html')">24</button>
+  <button onclick="goTo('creations/woman.html')">25</button>
+  <button onclick="goTo('creations/Xjljqfejb.html')">26</button>
 </div>
 
 <script>
