--- a/inventory.html
+++ b/inventory.html
@@ -112,29 +112,33 @@ h1 span {
   <button onclick="goTo('creations/clock_v2_0.html')">02</button>
   <button onclick="goTo('creations/clock_v3_0.html')">03</button>
   <button onclick="goTo('creations/cmd.html')">04</button>
-  <button onclick="goTo('creations/Doom Lifting.html')">05</button>
-  <button onclick="goTo('creations/emojis.html')">06</button>
-  <button onclick="goTo('creations/eyes.html')">07</button>
-  <button onclick="goTo('creations/i_really_should_be_sleeping_right_now.html')">08</button>
-  <button onclick="goTo('creations/Lava Lamp_fail.html')">09</button>
-  <button onclick="goTo('creations/limit_frame.html')">10</button>
-  <button onclick="goTo('creations/Lunar Clock.html')">11</button>
-  <button onclick="goTo('creations/maze.html')">12</button>
-  <button onclick="goTo('creations/neutron.html')">13</button>
-  <button onclick="goTo('creations/Norbletex.html')">14</button>
-  <button onclick="goTo('creations/page_02.html')">15</button>
-  <button onclick="goTo('creations/rats.html')">16</button>
-  <button onclick="goTo('creations/rats_also.html')">17</button>
-  <button onclick="goTo('creations/read_a_book.html')">18</button>
-  <button onclick="goTo('creations/THE INFUSION.html')">19</button>
-  <button onclick="goTo('creations/toenails.html')">20</button>
-  <button onclick="goTo('creations/tunnel.html')">21</button>
-  <button onclick="goTo('creations/tunnel_v2_0.html')">22</button>
-  <button onclick="goTo('creations/weather.html')">23</button>
-  <button onclick="goTo('creations/web_based_apt.html')">24</button>
-  <button onclick="goTo('creations/WIPE ME.html')">25</button>
-  <button onclick="goTo('creations/woman.html')">26</button>
-  <button onclick="goTo('creations/Xjljqfejb.html')">27</button>
+  <button onclick="goTo('creations/core.html')">05</button>
+  <button onclick="goTo('creations/Doom Lifting.html')">06</button>
+  <button onclick="goTo('creations/emojis.html')">07</button>
+  <button onclick="goTo('creations/eyes.html')">08</button>
+  <button onclick="goTo('creations/i.html')">09</button>
+  <button onclick="goTo('creations/i_really_should_be_sleeping_right_now.html')">10</button>
+  <button onclick="goTo('creations/Lava Lamp_fail.html')">11</button>
+  <button onclick="goTo('creations/limit_frame.html')">12</button>
+  <button onclick="goTo('creations/Lunar Clock.html')">13</button>
+  <button onclick="goTo('creations/maze.html')">14</button>
+  <button onclick="goTo('creations/neutron.html')">15</button>
+  <button onclick="goTo('creations/Norbletex.html')">16</button>
+  <button onclick="goTo('creations/page_02.html')">17</button>
+  <button onclick="goTo('creations/rats.html')">18</button>
+  <button onclick="goTo('creations/rats_also.html')">19</button>
+  <button onclick="goTo('creations/read_a_book.html')">20</button>
+  <button onclick="goTo('creations/THE INFUSION.html')">21</button>
+  <button onclick="goTo('creations/toenails.html')">22</button>
+  <button onclick="goTo('creations/train.html')">23</button>
+  <button onclick="goTo('creations/train2.html')">24</button>
+  <button onclick="goTo('creations/tunnel.html')">25</button>
+  <button onclick="goTo('creations/tunnel_v2_0.html')">26</button>
+  <button onclick="goTo('creations/weather.html')">27</button>
+  <button onclick="goTo('creations/web_based_apt.html')">28</button>
+  <button onclick="goTo('creations/WIPE ME.html')">29</button>
+  <button onclick="goTo('creations/woman.html')">30</button>
+  <button onclick="goTo('creations/Xjljqfejb.html')">31</button>
 </div>
 
 <script>
