--- a/hinventory.html
+++ b/hinventory.html
@@ -2,9 +2,11 @@
 <a href="creations/clock_v2_0.html" target="_blank">clock_v2_0</a><br>
 <a href="creations/clock_v3_0.html" target="_blank">clock_v3_0</a><br>
 <a href="creations/cmd.html" target="_blank">cmd</a><br>
+<a href="creations/core.html" target="_blank">core</a><br>
 <a href="creations/Doom Lifting.html" target="_blank">Doom Lifting</a><br>
 <a href="creations/emojis.html" target="_blank">emojis</a><br>
 <a href="creations/eyes.html" target="_blank">eyes</a><br>
+<a href="creations/i.html" target="_blank">i</a><br>
 <a href="creations/i_really_should_be_sleeping_right_now.html" target="_blank">i_really_should_be_sleeping_right_now</a><br>
 <a href="creations/Lava Lamp_fail.html" target="_blank">Lava Lamp_fail</a><br>
 <a href="creations/limit_frame.html" target="_blank">limit_frame</a><br>
@@ -18,6 +20,8 @@
 <a href="creations/read_a_book.html" target="_blank">read_a_book</a><br>
 <a href="creations/THE INFUSION.html" target="_blank">THE INFUSION</a><br>
 <a href="creations/toenails.html" target="_blank">toenails</a><br>
+<a href="creations/train.html" target="_blank">train</a><br>
+<a href="creations/train2.html" target="_blank">train2</a><br>
 <a href="creations/tunnel.html" target="_blank">tunnel</a><br>
 <a href="creations/tunnel_v2_0.html" target="_blank">tunnel_v2_0</a><br>
 <a href="creations/weather.html" target="_blank">weather</a><br>
